--- a/.gitignore
+++ b/.gitignore
@@ -97,12 +97,12 @@ dist
 # https://nextjs.org/blog/next-9-1#public-directory-support
 # public
 
+.idea
 # vuepress build output
 .vuepress/dist
 
 # vuepress v2.x temp and cache directory
 .temp
-.cache
 
 # Docusaurus cache and generated files
 .docusaurus
@@ -128,3 +128,9 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# Playwright
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
