--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -11,17 +11,39 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+
     - uses: actions/setup-node@v4
       with:
         node-version: lts/*
+
+    - name: Cache node_modules
+      uses: actions/cache@v3
+      with:
+        path: node_modules
+        key: ${{ runner.os }}-node_modules-${{ hashFiles('**/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-node_modules-
+
     - name: Install dependencies
       run: npm ci
+
+    - name: Cache Playwright browsers
+      uses: actions/cache@v3
+      with:
+        path: ~/.cache/ms-playwright
+        key: ${{ runner.os }}-playwright-browsers-${{ hashFiles('**/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-playwright-browsers-
+
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
+
     - name: Run Frontend tests
       run: npm run run:fe:tests:prod
-    - name: Run Api tests
+
+    - name: Run API tests
       run: npm run run:api:tests:prod
+
     - uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
       with:
